methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:6: error: not found: value vuBiscuit
     vuBiscuit=true
     ^MethodsReturning:12: error: not found: value vuBiscuit
  return vuBiscuit
         ^